--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(packages/uint256_t)
 add_subdirectory(packages/CellEngine)
 add_subdirectory(packages/CellNutrient)
 add_subdirectory(packages/CellPro)
+add_subdirectory(packages/CellSignals)
