--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(packages/CellEngine)
 add_subdirectory(packages/CellNutrient)
 add_subdirectory(packages/CellPro)
 add_subdirectory(packages/CellSignals)
+add_subdirectory(packages/ccl)
