--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(packages/CellNutrient)
 add_subdirectory(packages/CellPro)
 add_subdirectory(packages/CellSignals)
 add_subdirectory(packages/ccl)
+add_subdirectory(packages/gro)
