--- a/packages/CellPro/CMakeLists.txt
+++ b/packages/CellPro/CMakeLists.txt
@@ -22,7 +22,7 @@ target_include_directories(${PROJECT_NAME}
     )
 
 target_link_libraries(${PROJECT_NAME}
-    PRIVATE
+    PUBLIC
         uint256_t
     )
 
